TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "134232767547968" [label="Start"];
  "134232767547968" -> "134232767548064";
  "134232767548064" [label="Code"];
  "134232767548064" -> "134232767548160";
  "134232767548160" [label="Function"];
  "134232767548160" -> "134232767548256";
  "134232767548160" -> "134232767548304";
  "134232767548160" -> "134232767548352";
  "134232767548256" [label="main IDENTIFIER"];
  "134232767548304" [label="Parameters"];
  "134232767548352" [label="Code"];
  "134232767548352" -> "134232767548448";
  "134232767548352" -> "134232767548496";
  "134232767548448" [label="Code"];
  "134232767548448" -> "134232767548544";
  "134232767548448" -> "134232767548592";
  "134232767548544" [label="Declaration"];
  "134232767548544" -> "134232767548640";
  "134232767548544" -> "134232767548688";
  "134232767548640" [label="x IDENTIFIER"];
  "134232767548688" [label="1 INT"];
  "134232767548592" [label="Code"];
  "134232767548592" -> "134232767548784";
  "134232767548592" -> "134232767548832";
  "134232767548784" [label="Declaration"];
  "134232767548784" -> "134232767548880";
  "134232767548784" -> "134232767548928";
  "134232767548880" [label="x IDENTIFIER"];
  "134232767548928" [label="2 INT"];
  "134232767548832" [label="Code"];
  "134232767548832" -> "134232767549024";
  "134232767548832" -> "134232767549072";
  "134232767549024" [label="Declaration"];
  "134232767549024" -> "134232767549120";
  "134232767549024" -> "134232767549168";
  "134232767549120" [label="x IDENTIFIER"];
  "134232767549168" [label="3 INT"];
  "134232767549072" [label="Code"];
  "134232767549072" -> "134232767549264";
  "134232767549072" -> "134232767549312";
  "134232767549072" -> "134232767549456";
  "134232767549264" [label="Declaration"];
  "134232767549264" -> "134232767549360";
  "134232767549264" -> "134232767549408";
  "134232767549360" [label="y IDENTIFIER"];
  "134232767549408" [label="Dereference"];
  "134232767549408" -> "134232767549504";
  "134232767549504" [label="x IDENTIFIER"];
  "134232767549312" [label="Comment"];
  "134232767549312" -> "134232767549552";
  "134232767549552" [label=" y should be 3 COMMENT"];
  "134232767549456" [label="Code"];
  "134232767549456" -> "134232767549648";
  "134232767549456" -> "134232767549696";
  "134232767549456" -> "134232767549840";
  "134232767549456" -> "134232767549984";
  "134232767549648" [label="Declaration"];
  "134232767549648" -> "134232767549744";
  "134232767549648" -> "134232767549792";
  "134232767549744" [label="x IDENTIFIER"];
  "134232767549792" [label="4 INT"];
  "134232767549696" [label="Declaration"];
  "134232767549696" -> "134232767549888";
  "134232767549696" -> "134232767549936";
  "134232767549888" [label="z IDENTIFIER"];
  "134232767549936" [label="Dereference"];
  "134232767549936" -> "134232767550032";
  "134232767550032" [label="x IDENTIFIER"];
  "134232767549840" [label="Comment"];
  "134232767549840" -> "134232767550080";
  "134232767550080" [label=" z should be 4 COMMENT"];
  "134232767549984" [label="Code"];
  "134232767549984" -> "134232767550176";
  "134232767550176" [label="Declaration"];
  "134232767550176" -> "134232767550272";
  "134232767550176" -> "134232767550320";
  "134232767550272" [label="x IDENTIFIER"];
  "134232767550320" [label="5 INT"];
  "134232767548496" [label="Return"];
  "134232767548496" -> "134232767548976";
  "134232767548976" [label="0 INT"];
}
